# FAR23LOADS

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cli.py  cspell.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
app/: Home.py
app/data/: reference_aircraft.csv
app/pages/: 00_Configuration_Layout.py  01_Weight_Estimate.py  02_Weight_CG_Inertia.py  03_Wing_Geometry.py  04_Weight_Envelope.py  05_Structural_Speeds.py  06_Airloads.py  06_Mach_Limit.py  07_Flight_Envelope.py  08_Net_Wing_Loads.py  09_Critical_Loads.py  10_Fuselage_Loads.py  11_Tail_Distribution.py  12_Aileron_Loads.py  13_Flap_Loads.py  14_Tab_Loads.py  15_Landing_Loads.py  16_Balanced_Tail_Verification.py  19_Engine_Mount.py  20_One_Engine_Out.py
app/views/: aileron_loads.py  airloads.py  configuration_layout.py  (+20 more)
docs/: 00_INDEX.md
examples/: cessna_210.project.json  concept_heavy.project.json  dhc8_dash8.project.json  ga6_normal.project.json
farloads/: __init__.py  constants.py  io.py  models.py  registry.py  report.py  units.py  workflow.py
tests/: conftest.py  test_aileron.py  test_airloads.py  test_balloads.py  test_body_loads.py  test_concept.py  test_configuration.py  test_engine.py  test_engine_far25.py  test_flap.py  test_flight_envelope.py  test_io.py  test_landing.py  test_mach_limit.py  test_net_loads.py  test_one_engine_out.py  test_reference_aircraft.py  test_report.py  test_sbeam_bridge.py  test_select.py  test_structural_speeds.py  test_tab.py  test_taildist.py  test_units.py  test_views_smoke.py  test_weight_envelope.py  test_weight_estimate.py  test_weight_onecg.py  test_wing_geometry.py  test_wing_inertia.py  test_workflow.py
(+38 files in other folders)
