[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "farloads"
version = "0.1.0"
description = "Modern Python/Streamlit replication of the FAR 23 LOADS suite (McMaster) — FAR Part 23 Subpart C structural design loads."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sean O'Meara", email = "sean.c.omeara74@gmail.com"},
]
keywords = ["far23", "aircraft", "structural-loads", "aerospace", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
farloads = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["farloads*"]

[tool.setuptools]
py-modules = ["cli"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E741",  # I, L, N, etc. are standard FAR 23 / structural-loads variable names ported from the BASIC source
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=farloads --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["farloads"]

[tool.coverage.report]
show_missing = true
skip_empty = true
